Changed the Pin to dashboard dropdown from edit goal and create goal to let the user pick between small, large, and hide instead of just Yes and No for showing the goal. Changed the .map function from the dashboard to render goals based on type. Moved the 'last log' text from activity module lower to fix overflowing

--- a/src/components/pages/Dashboard/ActivityComponent.module.css
+++ b/src/components/pages/Dashboard/ActivityComponent.module.css
@@ -1,6 +1,6 @@
 .activityModule{
     width: 100%;
-    height: 170px;
+    height: auto;
     display: flex;
     flex-direction: column;
     background-color: #1A1A1B;
@@ -110,6 +110,12 @@
     transform-origin: top right;
     overflow: hidden;
     animation: showDashboardMenu 0.1s;
+}
+.activityModule .lastLog{
+    height: 30px;
+    background-color: var(--background);
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 .activityModule .menu button{
     height: 40px;
